# lichat

./: .clang-format  .gitignore  ARCHITECTURE_DECOUPLING.md  Bytes.hpp  CMakeLists.txt  CMakePresets.json  CMakelists.txt  CMakelists_ffs.txt  ClientSocket.hpp  InitialiseNetworking.hpp  PRIVATE_MESSAGING_PROTOCOL.md  README.md  REVIEW.md  ServerSocket.hpp  Socket.hpp  TR_SECURE_DESIGN.md  TR_UDP_CHATROOM.md  bitmap.c  client.cpp  echo_server_tcp.cpp  echo_server_udp.cpp  echo_server_udp_chat.cpp  lc_bufmgr.hpp  lc_common.hpp  lc_consts.hpp  lc_db.cpp  lc_db.hpp  lc_keymgr.hpp  lc_long_msg.hpp  lc_sesmgr.hpp  lc_sessionpool.hpp  lc_strings.hpp  lc_ui_interface.hpp  lc_ui_ncurses.hpp  lc_ui_qt.cpp  lc_ui_qt.hpp  lc_usermgr.hpp  lc_winmgr.hpp  lc_winmgr_ncurses.hpp  lc_winmgr_windows.hpp  (+7 more)
.github/workflows/: build_and_test_ubuntu_gcc14_x64_debug.yml  build_and_test_ubuntu_gcc14_x64_release.yml  build_and_test_windows_msvc_x64_debug.yml  build_and_test_windows_msvc_x64_release.yml
